# espn-league54078-fantasy-stats

./: .gitignore  Makefile  README.md  espn_fantasy_api_download_and_data_generator.bat  espn_html_dashboard_generator.bat  espn_html_parser_automation.bat  espn_statsapi_data_generator.bat  espn_statsapi_validation.bat  high_level_design_diagram.drawio  install_packages.bat  players_drafted_on_final_roster_test_stat.py  pyproject.toml  python_modules.txt  requirements.txt  setup_environment.bat  setup_environment.sh  statsapi_downloader.bat
data_generator_scripts/: data_generator_draft.py  data_generator_espn_fantasy_api_all_players_info.py  data_generator_espn_fantasy_api_daily_rosters.py  data_generator_league_standings.py
espn_clubhouse_html_parser/: espn_clubhouse_html_parser.py
espn_fantasy_api_scripts/: espn_fantasy_api_all_players_info_data_generator.py  espn_fantasy_api_all_players_info_parser.py  espn_fantasy_api_daily_rosters_data_generator.py  espn_fantasy_api_download_and_data_generator.py  espn_fantasy_api_downloader.py  espn_fantasy_api_downloads_parser.py  espn_fantasy_api_draft_details_parser.py  espn_fantasy_api_loader.py  espn_fantasy_api_scoring_period_parser.py  espn_fantasy_api_utils.py
espn_html_dashboard_generator/: espn_html_dashboard_generator.py
espn_html_parser_scripts/: espn_html_parser.py  espn_html_parser_automation.py  espn_html_parser_clubhouse.py  espn_html_parser_draft_recap.py  espn_html_parser_league_standings.py  espn_html_parser_utils.py  espn_html_parser_writer.py  logging.ini
espn_league_roster_html_parser/: espn_league_roster_html_parser.bat  espn_league_roster_html_parser.py
espn_nhlapi_scripts/: espn_html_nhlapi_data_generator.py  espn_nhlapi_utils.py
espn_scripts/: espn_fantasy_api_loader.py  (+39 more)
(+240 files in other folders)
