[project]
name = "espn-league54078-fantasy-stats"
version = "0.1.0"
description = "ESPN League 54078 Fantasy Stats"
readme = "README.md"
requires-python = "==3.8.10"
dependencies = ["aiohttp==3.8.1",
                "beautifulsoup4==4.10.0",
                "dominate==2.9.0",
                "html5lib==1.1",
                "ipykernel==6.9.1",
                "kaleido==0.2.1",
                "lxml==4.6.3",
                "nbformat==5.3.0",
                "openpyxl==3.0.9",
                "pandas==1.3.4",
                "plotly==5.7.0",
                "requests==2.26.0",
                "unidecode==1.3.8"]

[tool.uv]
package = true

[tool.setuptools]
packages = ["data_generator_scripts",
            "espn_fantasy_api_scripts",
            "espn_html_parser_scripts",
            "espn_nhlapi_analysis",
            "espn_nhlapi_scripts",
            "nhlapi_scripts",
            "utils"]