[project]
name = "espn-league54078-fantasy-stats"
version = "0.1.0"
description = "ESPN League 54078 Fantasy Stats"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "aiohttp==3.13.2",
    "beautifulsoup4==4.10.0",
    "dominate==2.9.0",
    "html5lib==1.1",
    "ipykernel==7.1.0",
    "kaleido==0.2.1",
    "lxml==6.0.2",
    "nbformat==5.3.0",
    "pandas==2.3.3",
    "plotly==6.5.0",
    "requests==2.26.0",
    "tqdm==4.67.1",
    "unidecode==1.3.8",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["data_generator_scripts",
            "espn_fantasy_api_scripts",
            "espn_html_parser_scripts",
            "espn_nhlapi_analysis",
            "nhlapi_scripts",
            "utils"]
